// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should setup correctly 1`] = `
Runtime {
  "results": Object {
    "0": Object {
      "expression": "first",
      "inference": "string",
      "line": 0,
    },
    "3": Object {
      "diagnostic": "Expected 0 arguments, but got 1.",
      "expression": "second",
      "line": 3,
    },
  },
}
`;

exports[`should setup correctly with specified tsconfig 1`] = `
Runtime {
  "results": Object {
    "0": Object {
      "expression": "first",
      "inference": "string | undefined",
      "line": 0,
    },
    "3": Object {
      "diagnostic": "Expected 0 arguments, but got 1.",
      "expression": "second",
      "line": 3,
    },
  },
}
`;

exports[`should throw error if unmatched-diagnostic exist 1`] = `
"Unmatched diagnostic(s) detected:

  fixtures/snapshots/unmatched.ts:7 Argument of type '\\"str\\"' is not assignable to parameter of type 'number'.
  fixtures/snapshots/unmatched.ts:9 Type '{ a: { b: {}; }; }' is not assignable to type '{ a: { b: { c: any; }; }; }'."
`;
